test(player): 변경된 팩토리 메서드 반영